# komplex-kanban

./: CMakeLists.txt  Complex.h  README.md  main.cpp
lib/: !=.cpp  ==.cpp  Adivison.cpp  abs.cpp  acos.cpp  arg.cpp  asin.cpp  atan.cpp  conj.cpp  cos.cpp  cosh.cpp  exp.cpp  imag.cpp  log.cpp  log10.cpp  norm.cpp  overload+.cpp  overload+=.cpp  overload-.cpp  overload-=.cpp  overloaddivide=.cpp  overloadin.cpp  overloadout.cpp  polar.cpp  pow.cpp  real.cpp  sin.cpp  sinh.cpp  sqrt.cpp  tan.cpp  tanh.cpp
